--- a/squelettes/article_exemple.html
+++ b/squelettes/article_exemple.html
@@ -2,3 +2,6 @@
   <h1>Google Chrome</h1>
   <p>Google Chrome is a free, open-source web browser developed by Google, released in 2008.</p>
 </article>
+
+   <!-- Map Section -->
+    <div id="map"></div>
