--- a/squelettes/categorie_exemple.html
+++ b/squelettes/categorie_exemple.html
@@ -41,7 +41,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Source de</span> Proverb
+                    <i class="fa fa-play-circle"></i> <span class="light">Proverb</span>
                 </a>
             </div>
 
@@ -55,12 +55,6 @@
 		     <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html">Accueil</a>
                     </li>
-                     <li>
-			  <a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Connexion</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
-                    </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#présentation">Présentation</a>
                     </li>
@@ -72,6 +66,12 @@
                     </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#contact">Contact</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
+                    </li>
+		    <li>
+			<a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Mon compte</a>
                     </li>
                 </ul>
             </div>
@@ -87,43 +87,37 @@
             <div class="col-lg-8 col-lg-offset-2">
 	    <p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/avatar_user" alt="" width="" height="" /></p>
 	        <h1>Mon compte</h1>
-	    <h3><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/photo" alt="" width="40" height="40" /> &nbsp; Galerie:</h3>
+			<h3><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/photo" alt="" width="40" height="40" /> &nbsp; Galerie:</h3>
 	    
 	   <center><table width=100% border=1>
 <tr><td width=33%><center><h3>Photo-1 </h3>
-		<p>  <img class="size-full wp-image-1201 align-left" src="http://localhost/spip/IMG/paysage.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>   <a href="http://localhost/spip/IMG/paysage.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/paysage.jpg" alt="paysage" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/paysage.jpg" download="paysage.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 		</td>
 <td width=33%><center><h3>Photo-2 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/pont.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>  <a href="http://localhost/spip/IMG/pont.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/pont.jpg" alt="pont" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/pont.jpg" download="pont.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 		</td>
 <td width=34%><center><h3>Photo-3 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/mer_2.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>  <a href="http://localhost/spip/IMG/mer_2.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/mer_2.jpg" alt="mer" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/mer_2.jpg" download="mer_2.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 		</td>
 <tr><td width=33%><center><h3>Photo-4 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/neige_foret.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>  <a href="http://localhost/spip/IMG/neige_foret.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/neige_foret.jpg" alt="neige foret" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/neige_foret.jpg" download="neige_foret.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 		</td>
 <td width=33%><center><h3>Photo-5 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/cote_italie.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>   <a href="http://localhost/spip/IMG/cote_italie.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/cote_italie.jpg" alt="cote italie" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/cote_italie.jpg" download="cote_italie.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 		</td>
 <td width=34%><center><h3>Photo-6 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/ciel_rose.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>  <a href="http://localhost/spip/IMG/ciel_rose.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/ciel_rose.jpg" alt="ciel rose" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/ciel_rose.jpg" download="ciel_rose.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 		</td>
 <tr><td width=33%><center><h3>Rajouter </h3>
@@ -135,7 +129,12 @@
 	   </div>
         </div>
     </section>
-
+	&nbsp;
+	&nbsp;
+	<center><a href="http://localhost/spip/squelettes/page_accueil.html"><p><u>Déconnexion?</u></p></a>
+	
+	
+	
 
     <!-- Footer -->
     <footer>
