--- a/squelettes/categorie_philosophique.html
+++ b/squelettes/categorie_philosophique.html
@@ -41,7 +41,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Source de</span> Proverb
+                    <i class="fa fa-play-circle"></i> <span class="light">Proverb</span>
                 </a>
             </div>
 
@@ -55,12 +55,6 @@
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html">Accueil</a>
                     </li>
-                     <li>
-			  <a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Connexion</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
-                    </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#présentation">Présentation</a>
                     </li>
@@ -72,6 +66,12 @@
                     </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#contact">Contact</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
+                    </li>
+		    <li>
+			<a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Mon compte</a>
                     </li>
                 </ul>
             </div>
