--- a/squelettes/page_accueil.html
+++ b/squelettes/page_accueil.html
@@ -42,7 +42,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Source de</span>Proverb
+                    <i class="fa fa-play-circle"></i> <span class="light">Proverb</span>
                 </a>
             </div>
 
@@ -54,31 +54,28 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-		     <li>
+	             <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html">Accueil</a>
                     </li>
 		    <li>
-			  <a class="page-scroll" href="http://localhost/spip/squelettes/categorie_exemple.html">Exemple</a>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#présentation">Présentation</a>
                     </li>
 		    <li>
-			  <a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Connexion</a>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#globe">Globe</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#catégorie">Catégorie</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#contact">Contact</a>
                     </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
                     </li>
 		    <li>
-                        <a class="page-scroll" href="#présentation">Présentation</a>
+			<a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Mon compte</a>
                     </li>
-		    <li>
-                        <a class="page-scroll" href="#globe">Globe</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="#catégorie">Catégorie</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
+		</ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -108,17 +105,16 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>A PROPOS DE NOUS</h1>
+		<p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/proverb.jpg" alt="" width="160" height="160" />&nbsp; <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/paris_8.jpg" alt="" width="250" height="160" /></p>
+		 <p><iframe width="560" height="315" src="http://localhost/spip/IMG/proverb_2017.mp4" frameborder="0" allowfullscreen></iframe></p>
 		<p>Un peu d'histoire, les proverbes sont des paroles qui manifestent, réfleter et exprime un conseil ou une experience vécue et confirmer. Par les précédentes générations, les proverbes ont traversés des époques jusqu'à aujourd'hui avec leur vérité.</p>
-                <p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/paris_8.jpg" alt="" width="250" height="160" /></p>
-	        <h3>Qui sommes-nous?</h3>
-		<p> Etudiant de l'université de Paris VIII Saint-Denis, nous avons mis en place ce site afin de permettre a notre public de découvrir des proverbes. Chaque utilisateur via ce site aura l'occasion de découvrir des proverbes et peut aussi en envoyer des proverbes via notre application mobile. Ce site propose une aproche et un message qui parle à tous notre public du monde entier. Proverbe drôle, proverbe phylosophique, proverbe d'amour, proverbe fun, proverbe connu et proverbe d'amitié: tous les sujets sont abordés.</p>
+                <h3>Qui sommes-nous?</h3>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/carte_du_monde_2.jpg" alt="" width="250" height="160" />
-		<img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/carte_du_monde_1.jpg" alt="" width="250" height="160" />
-		</p>
+		<img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/carte_du_monde_1.jpg" alt="" width="250" height="160" /></p>
+		<p> Etudiant de l'université de Paris VIII Saint-Denis, nous avons mis en place ce site afin de permettre a notre public de découvrir des proverbes. Chaque utilisateur via ce site aura l'occasion de découvrir des proverbes et peut aussi en envoyer des proverbes via notre application mobile. Ce site propose une aproche et un message qui parle à tous notre public du monde entier. Proverbe drôle, proverbe phylosophique, proverbe d'amour, proverbe fun, proverbe connu et proverbe d'amitié: tous les sujets sont abordés.</p>
 		<h3>Notre mission </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/proverb.jpg" alt="" width="160" height="160" /></p>
+		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/logo_proverb" alt="" width="160" height="160" /></p>
 		<p> Elle consiste à mettre les proverbes au goût du jour via ceux site et une application mobile. L'application mobile sera équipé d'un système de géolocalisation avec la découverte de proverbes en fonction de notre situation géographique et de notre positionnement. Suivant les lieux ou l'on se trouve, on recevra des proverbes existants qui nous serons proposés.</p>
-	        <p> <iframe width="480" height="270" src="http://localhost/spip/IMG/proverb_2017.mp4" frameborder="0" allowfullscreen></iframe> </p>
 	    </div>
         </div>
     </section>
@@ -148,24 +144,36 @@
 <p> Les proverbes sont répertoriés selon leur catégorie de thèmes et leur couleur:</p>
 <br>
 <center><table width=100% border=1>
-<tr><td width=33%><center><h3>drôle </h3>
-		<p>  <img class="size-full wp-image-1201 align-left" src="http://localhost/spip/IMG/drole.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_drole.html" class="btn btn-default btn-lg">bleu</a></td>
-<td width=33%><center><h3>philosophique </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/philosophie_1.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_philosophique.html" class="btn btn-default btn-lg">rouge</a></td>
-<td width=34%><center><h3>amour </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/amour_2.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_amour.html" class="btn btn-default btn-lg">rose</a></td>
-<tr><td width=33%><center><h3>connu </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/connu.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_connu.html" class="btn btn-default btn-lg">violet</a></td>
-<td width=33%><center><h3>fun </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/fun.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_fun.html" class="btn btn-default btn-lg">jaune</a></td>
-<td width=34%><center><h3>amitié </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/amitié.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_amitie.html" class="btn btn-default btn-lg">vert</a></td>
+      <tr><td width=33%><center><h3>Drôle</h3>
+      <figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_drole.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_bleu.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Drôle"  srcset="http://localhost/spip/IMG/abstraite_bleu.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<td width=33%><center><h3>Philosophique</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_philosophique.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_rouge.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Philosophique"  srcset="http://localhost/spip/IMG/abstraite_rouge.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<td width=34%><center><h3>Amour</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_amour.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_rose_1.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Amour"  srcset="http://localhost/spip/IMG/abstraite_rose_1.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<tr><td width=33%><center><h3>Connu</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_connu.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_violet.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Connu"  srcset="http://localhost/spip/IMG/abstraite_violet.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<td width=33%><center><h3>Fun</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_fun.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_jaune.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Fun"  srcset="http://localhost/spip/IMG/abstraite_jaune.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<td width=34%><center><h3>Amitié</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_amitie.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_vert_3.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Fun"  srcset="http://localhost/spip/IMG/abstraite_vert_3.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
 </table></center>
 		</div>
         </div>
@@ -260,9 +268,6 @@
             </div>
         </div>
     </section>
-    
-     <!-- Map Section -->
-    <div id="map"></div>
     
 
     <!-- Footer -->
