--- a/squelettes/page_application_mobile.html
+++ b/squelettes/page_application_mobile.html
@@ -41,7 +41,8 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Source de</span> Proverb
+                    <i class="fa fa-play-circle"></i> <span class="light">Proverb</span>
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,12 +55,6 @@
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html">Accueil</a>
                     </li>
-                     <li>
-			  <a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Connexion</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
-                    </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#présentation">Présentation</a>
                     </li>
@@ -71,6 +66,12 @@
                     </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#contact">Contact</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
+                    </li>
+		    <li>
+			<a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Mon compte</a>
                     </li>
                 </ul>
             </div>
@@ -89,8 +90,8 @@
 		<p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Capture_tel_1.jpg" alt="" width="225" height="400" />
 	        <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Capture_tel_2.jpg" alt="" width="225" height="400" />
 		      <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Capture_tel_3.jpg" alt="" width="225" height="400" /></p>
-		<p>•Publiez des photos avec des proverbes
-		<p>•Recevez une notification lorsque un proverbe est publiez près du lieu où vous vous trouvez
+		<p>•Publiez des photos avec votre localisation géographique enplus du proverbe 
+		<p>•Recevez une notification lorsque un proverbe est publiez près du lieu où vous vous trouvez grâce au système de géocalisation de proverbe
 		<p>•Proposez des proverbes
 		      <p>Pour savoir comment s'inscrire à Proverb, rendez-vous sur notre page <a href="http://localhost/spip/squelettes/page_connexion.html"> http://localhost/spip/squelettes/page_connexion.html</a> </p>
 		<p>Proverb est disponible pour tous les utilisateurs de tous âges.</p>
