--- a/squelettes/page_photo.html
+++ b/squelettes/page_photo.html
@@ -41,7 +41,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Source de</span> Proverb
+                    <i class="fa fa-play-circle"></i> <span class="light">Proverb</span>
                 </a>
             </div>
 
@@ -55,12 +55,6 @@
 		     <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html">Accueil</a>
                     </li>
-                     <li>
-			  <a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Connexion</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
-                    </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#présentation">Présentation</a>
                     </li>
@@ -73,6 +67,12 @@
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#contact">Contact</a>
                     </li>
+		    <li>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
+                    </li>
+		    <li>
+			<a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Mon compte</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -80,6 +80,9 @@
         <!-- /.container -->
     </nav>
 
+
+	
+	
 
     <!-- About Section -->
     <section id="#" class="container content-section text-center">
@@ -89,57 +92,51 @@
 		<h1>Venez proposez vos proverbes et partagez via</h1>
 		  <p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Facebook_2" alt="" width="60" height="60" /><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Linkedin" alt="" width="60" height="60" /> &nbsp;<img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Google_Plus" alt="" width="60" height="60" /> &nbsp;<img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Pinterest" alt="" width="60" height="60" /> &nbsp;<img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Twitter" alt="" width="60" height="60" /> &nbsp;<img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/instagram" alt="" width="60" height="60" /> &nbsp;</p>
 	    <h3><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/photo_2" alt="" width="40" height="40" /> &nbsp; Galerie:</h3>
-	    
-	   <center><table width=100% border=1>
+	  
+	  <center><table width=100% border=1>
 <tr><td width=33%><center><h3>Photo-1 </h3>
-		<p>  <img class="size-full wp-image-1201 align-left" src="http://localhost/spip/IMG/soleil_couchant.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p> <a href="http://localhost/spip/IMG/soleil_couchant.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/soleil_couchant.jpg" alt="soleil couchant" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/soleil_couchant.jpg" download="soleil_couchant.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 <p><label> Saisissez votre proverbe<br>
     <span class="input"><textarea name="your-message" cols="20" rows="5" class="textarea" aria-invalid="false"></textarea></span> </label></p>
 		<p><input type="submit" value="ENVOYER" class="input"><span class="ajax-loader"></span></p>
 		</td>
 <td width=33%><center><h3>Photo-2 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/neige_montagne.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>  <a href="http://localhost/spip/IMG/neige_montagne.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/neige_montagne.jpg" alt="neige montagne" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/neige_montagne.jpg" download="neige_montagne.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 <p><label> Saisissez votre proverbe<br>
     <span class="input"><textarea name="your-message" cols="20" rows="5" class="textarea" aria-invalid="false"></textarea></span> </label></p>
 		<p><input type="submit" value="ENVOYER" class="input"><span class="ajax-loader"></span></p>
 		</td>
 <td width=34%><center><h3>Photo-3 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/foret_route.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>  <a href="http://localhost/spip/IMG/foret_route.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/foret_route.jpg" alt="fôret route" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/foret_route.jpg" download="foret_route.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 <p><label> Saisissez votre proverbe<br>
     <span class="input"><textarea name="your-message" cols="20" rows="5" class="textarea" aria-invalid="false"></textarea></span> </label></p>
 		<p><input type="submit" value="ENVOYER" class="input"><span class="ajax-loader"></span></p>
 		</td>
 <tr><td width=33%><center><h3>Photo-4 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/paname.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>  <a href="http://localhost/spip/IMG/paname.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/paname.jpg" alt="paname" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/paname.jpg" download="paname.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 <p><label> Saisissez votre proverbe<br>
     <span class="input"><textarea name="your-message" cols="20" rows="5" class="textarea" aria-invalid="false"></textarea></span> </label></p>
 		<p><input type="submit" value="ENVOYER" class="input"><span class="ajax-loader"></span></p>
 		</td>
 <td width=33%><center><h3>Photo-5 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/chemin_fleur_rose.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p>  <a href="http://localhost/spip/IMG/chemin_fleur_rose.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/chemin_fleur_rose.jpg" alt="chemin fleur rose" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/chemin_fleur_rose.jpg" download="chemin_fleur_rose.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 <p><label> Saisissez votre proverbe<br>
     <span class="input"><textarea name="your-message" cols="20" rows="5" class="textarea" aria-invalid="false"></textarea></span> </label></p>
 		<p><input type="submit" value="ENVOYER" class="input"><span class="ajax-loader"></span></p>
 		</td>
 <td width=34%><center><h3>Photo-6 </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/urbain.jpg" alt="" width="250" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/zoom" alt="" width="30" height="30" />&nbsp; Zoom</p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" />&nbsp; Télécharger</p>
+		<p> <a href="http://localhost/spip/IMG/urbain.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/urbain.jpg" alt="urbain" title="cliquez pour agrandir" width="250" height="160" /></a></p>
+		<p> <a href="http://localhost/spip/IMG/urbain.jpg" download="urbain.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
 <p><label> Saisissez votre proverbe<br>
     <span class="input"><textarea name="your-message" cols="20" rows="5" class="textarea" aria-invalid="false"></textarea></span> </label></p>
