--- a/squelettes/sommaire.html
+++ b/squelettes/sommaire.html
@@ -9,7 +9,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Source de</span>Proverb
+                    <i class="fa fa-play-circle"></i> <span class="light">Proverb</span>
                 </a>
             </div>
 
@@ -20,29 +20,26 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-		     <li>
+		 <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html">Accueil</a>
                     </li>
 		    <li>
-			  <a class="page-scroll" href="http://localhost/spip/squelettes/categorie_exemple.html">Exemple</a>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#présentation">Présentation</a>
                     </li>
 		    <li>
-			  <a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Connexion</a>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#globe">Globe</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#catégorie">Catégorie</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="http://localhost/spip/squelettes/page_accueil.html#contact">Contact</a>
                     </li>
 		    <li>
                         <a class="page-scroll" href="http://localhost/spip/squelettes/page_photo.html">Photo</a>
                     </li>
 		    <li>
-                        <a class="page-scroll" href="#présentation">Présentation</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="#globe">Globe</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="#catégorie">Catégorie</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+			<a class="page-scroll" href="http://localhost/spip/squelettes/page_connexion.html">Mon compte</a>
                     </li>
                 </ul>
             </div>
@@ -116,24 +113,36 @@
 <p> Les proverbes sont répertoriés selon leur catégorie de thèmes et leur couleur:</p>
 <br>
 <center><table width=100% border=1>
-<tr><td width=33%><center><h3>drôle </h3>
-		<p>  <img class="size-full wp-image-1201 align-left" src="http://localhost/spip/IMG/drole.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_drole.html" class="btn btn-default btn-lg">bleu</a></td>
-<td width=33%><center><h3>philosophique </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/philosophie_1.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_philosophique.html" class="btn btn-default btn-lg">rouge</a></td>
-<td width=34%><center><h3>amour </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/amour_2.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_amour.html" class="btn btn-default btn-lg">rose</a></td>
-<tr><td width=33%><center><h3>connu </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/connu.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_connu.html" class="btn btn-default btn-lg">violet</a></td>
-<td width=33%><center><h3>fun </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/fun.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_fun.html" class="btn btn-default btn-lg">jaune</a></td>
-<td width=34%><center><h3>amitié </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/amitié.jpg" alt="" width="250" height="160" /></p>
-		<a href="http://localhost/spip/squelettes/categorie_amitie.html" class="btn btn-default btn-lg">vert</a></td>
+      <tr><td width=33%><center><h3>Drôle</h3>
+      <figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_drole.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_bleu.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Drôle"  srcset="http://localhost/spip/IMG/abstraite_bleu.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<td width=33%><center><h3>Philosophique</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_philosophique.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_rouge.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Philosophique"  srcset="http://localhost/spip/IMG/abstraite_rouge.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<td width=34%><center><h3>Amour</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_amour.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_rose.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Amour"  srcset="http://localhost/spip/IMG/abstraite_rose.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<tr><td width=33%><center><h3>Connu</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_connu.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_violet.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Connu"  srcset="http://localhost/spip/IMG/abstraite_violet.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<td width=33%><center><h3>Fun</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_fun.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_jaune.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Fun"  srcset="http://localhost/spip/IMG/abstraite_jaune.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
+<td width=34%><center><h3>Amitié</h3>
+<figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_amitie.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_vert_3.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Fun"  srcset="http://localhost/spip/IMG/abstraite_vert_3.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+</a>
+      </figure> </li></td>
 </table></center>
 		</div>
         </div>
@@ -230,7 +239,5 @@
         </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
     
       <INCLURE{fond=inclure/pied}>
