--- a/squelettes/categorie_philosophique.html
+++ b/squelettes/categorie_philosophique.html
@@ -89,6 +89,32 @@
 	    </div>
         </div>
     </section>
+	
+	
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 
     <center><div class="clearfix"></div>
 <div class="pagination">
@@ -96,7 +122,13 @@
       <span class="current">1</span>
 	    <a href="http://localhost/spip/squelettes/categorie_philosophique_2">2</a>
 	    <a href="http://localhost/spip/squelettes/categorie_philosophique_3">3</a>
-	    <a class="next" href="http://localhost/spip/squelettes/categorie_philosophique_3">›</a></p>
+		<a href="http://localhost/spip/squelettes/categorie_philosophique_4">4</a>
+		<a href="http://localhost/spip/squelettes/categorie_philosophique_5">5</a>
+		<a href="http://localhost/spip/squelettes/categorie_philosophique_6">6</a>
+		<a href="http://localhost/spip/squelettes/categorie_philosophique_7">7</a>
+		<a href="http://localhost/spip/squelettes/categorie_philosophique_8">8</a>
+		<a href="http://localhost/spip/squelettes/categorie_philosophique_9">9</a>
+	    <a class="next" href="http://localhost/spip/squelettes/categorie_philosophique_9">›</a></p>
 	  </div></center>
 
 
