--- a/squelettes/categorie_philosophique_2.html
+++ b/squelettes/categorie_philosophique_2.html
@@ -83,9 +83,6 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Proverbe Philosophique</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
 	    <body background="http://localhost/spip/IMG/rouge"></body>
 	    </div>
         </div>
@@ -98,7 +95,13 @@
 <a href="http://localhost/spip/squelettes/categorie_philosophique">1</a>
 <span class="current">2</span>
 <a href="http://localhost/spip/squelettes/categorie_philosophique_3">3</a>
-      <a class="next" href=" http://localhost/spip/squelettes/categorie_philosophique_3">›</a></p>
+<a href="http://localhost/spip/squelettes/categorie_philosophique_4">4</a>
+<a href="http://localhost/spip/squelettes/categorie_philosophique_5">5</a>
+<a href="http://localhost/spip/squelettes/categorie_philosophique_6">6</a>
+<a href="http://localhost/spip/squelettes/categorie_philosophique_7">7</a>
+<a href="http://localhost/spip/squelettes/categorie_philosophique_8">8</a>
+<a href="http://localhost/spip/squelettes/categorie_philosophique_9">9</a>
+      <a class="next" href=" http://localhost/spip/squelettes/categorie_philosophique_9">›</a></p>
 </div></center>
 
 
