--- a/squelettes/sommaire.html
+++ b/squelettes/sommaire.html
@@ -69,7 +69,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>A PROPOS DE NOUS</h1>
 		<p>Un peu d'histoire, les proverbes sont des paroles qui manifestent, réfleter et exprime un conseil ou une experience vécue et confirmer. Par les précédentes générations, les proverbes ont traversés des époques jusqu'à aujourd'hui avec leur vérité.</p>
-                <p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/paris_8.jpg" alt="" width="250" height="160" /></p>
+                <p>  <iframe align=right width="680" height="435" src="https://www.youtube.com/embed/YKwArdXRMBg" frameborder="0" allowfullscreen></iframe></p>
 	        <h3>Qui sommes-nous?</h3>
 		<p> Etudiant de l'université de Paris VIII Saint-Denis, nous avons mis en place ce site afin de permettre a notre public de découvrir des proverbes. Chaque utilisateur via ce site aura l'occasion de découvrir des proverbes et peut aussi en envoyer des proverbes via notre application mobile. Ce site propose une aproche et un message qui parle à tous notre public du monde entier. Proverbe drôle, proverbe phylosophique, proverbe d'amour, proverbe fun, proverbe connu et proverbe d'amitié: tous les sujets sont abordés.</p>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/carte_du_monde_2.jpg" alt="" width="250" height="160" />
@@ -219,7 +219,7 @@
 
 		
 		<br>
-		<p><a href="mailto:feedback@startbootstrap.com">proverb@gmail.com</a>
+		<p><a href="mailto:proverb.paris8@gmail.com">proverb.paris8@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
