--- a/squelettes/categorie_exemple.html
+++ b/squelettes/categorie_exemple.html
@@ -84,44 +84,22 @@
             <div class="col-lg-8 col-lg-offset-2">
 	    <p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/avatar_user" alt="" width="" height="" /></p>
 	        <h1>Mon compte</h1>
-			<h3><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/photo" alt="" width="40" height="40" /> &nbsp; Galerie:</h3>
+			<h3><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/terre_2" alt="" width="250" height="160" /> &nbsp;</h3>
+			
+			<center><div class="6u 12u$(medium)">                                                        <h3>Proverbe du Jour</h3>                            <p></p><blockquote><img src="http://www.ewakoo.com/core/images/pays/flags/romania.png" alt="roumanie" title="roumanie" class="flagProv">  L'amour comprend toutes les langues.<br>                                <div id="social">                                    <a title="Partager sur Facebook" href="https://www.facebook.com/dialog/feed?app_id=999781826804332&amp;link=http://www.unproverbe.com/l-amour-comprend-4168.html&amp;description=Proverbe ( roumanie ). D'autres proverbes, devises, fables disponibles sur le site !&amp;picture=http://www.unproverbe.com/images/facebooke.jpg&amp;name=L'amour comprend toutes les langues.&amp;redirect_uri=http://www.unproverbe.com/l-amour-comprend-4168.html" target="_blank"><img src="http://www.unproverbe.com/images/fb_small.png" alt="Partager sur Facebook"></a>                                <a title="Partager sur Twitter" href="https://twitter.com/intent/tweet?original_referer=http://www.unproverbe.com&amp;text=L'amour comprend toutes les langues.&amp;tw_p=tweetbutton&amp;url=http://www.unproverbe.com" target="popup"><img src="http://www.unproverbe.com/images/tw_small.png" alt=""></a>            </div>                            </blockquote>                            <a href="les-proverbes.html" class="button special">Plus de proverbes</a>                            <p></p>                                                        <h3>Proverbe marrant</h3>                            <p></p><blockquote><img src="http://www.ewakoo.com/core/images/pays/flags/india.png" alt="Inde" title="Inde" class="flagProv">  Il y a des remèdes pour la maladie, il n'y en a point pour la destinée.<br>                                <div id="social">                                    <a title="Partager sur Facebook" href="https://www.facebook.com/dialog/feed?app_id=999781826804332&amp;link=http://www.unproverbe.com/il-y-a-des-rem-des-1508.html&amp;description=Proverbe ( Inde ). D'autres proverbes, devises, fables disponibles sur le site !&amp;picture=http://www.unproverbe.com/images/facebooke.jpg&amp;name=Il y a des remèdes pour la maladie, il n'y en a point pour la destinée.&amp;redirect_uri=http://www.unproverbe.com/il-y-a-des-rem-des-1508.html" target="_blank"><img src="http://www.unproverbe.com/images/fb_small.png" alt="Partager sur Facebook"></a>                                <a title="Partager sur Twitter" href="https://twitter.com/intent/tweet?original_referer=http://www.unproverbe.com&amp;text=Il y a des remèdes pour la maladie, il n'y en a point pour la destinée.&amp;tw_p=tweetbutton&amp;url=http://www.unproverbe.com" target="popup"><img src="http://www.unproverbe.com/images/tw_small.png" alt=""></a>            </div>                            </blockquote>                            <a href="proverbes-droles.html" class="button special">Autres proverbes drôles</a>                            <p></p>                                                        <p>                                                        </p>                            </div>
+			
+			<center><h3>Proverbe drôle</h3>
+			
+			<center><h3>Proverbe philosophique</h3>
+			
+			<center><h3>Proverbe amour</h3>
+			
+			<center><h3>Proverbe connu</h3>
+			
+			<center><h3>Proverbe fun</h3>
+			
+			<center><h3>Proverbe amitié</h3>
 	    
-	   <center><table width=100% border=1>
-<tr><td width=33%><center><h3>Photo-1 </h3>
-		<p>   <a href="http://localhost/spip/IMG/paysage.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/paysage.jpg" alt="paysage" title="cliquez pour agrandir" width="250" height="160" /></a></p>
-		<p> <a href="http://localhost/spip/IMG/paysage.jpg" download="paysage.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
-		</td>
-<td width=33%><center><h3>Photo-2 </h3>
-		<p>  <a href="http://localhost/spip/IMG/pont.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/pont.jpg" alt="pont" title="cliquez pour agrandir" width="250" height="160" /></a></p>
-		<p> <a href="http://localhost/spip/IMG/pont.jpg" download="pont.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
-		</td>
-<td width=34%><center><h3>Photo-3 </h3>
-		<p>  <a href="http://localhost/spip/IMG/mer_2.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/mer_2.jpg" alt="mer" title="cliquez pour agrandir" width="250" height="160" /></a></p>
-		<p> <a href="http://localhost/spip/IMG/mer_2.jpg" download="mer_2.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
-		</td>
-<tr><td width=33%><center><h3>Photo-4 </h3>
-		<p>  <a href="http://localhost/spip/IMG/neige_foret.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/neige_foret.jpg" alt="neige foret" title="cliquez pour agrandir" width="250" height="160" /></a></p>
-		<p> <a href="http://localhost/spip/IMG/neige_foret.jpg" download="neige_foret.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
-		</td>
-<td width=33%><center><h3>Photo-5 </h3>
-		<p>   <a href="http://localhost/spip/IMG/cote_italie.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/cote_italie.jpg" alt="cote italie" title="cliquez pour agrandir" width="250" height="160" /></a></p>
-		<p> <a href="http://localhost/spip/IMG/cote_italie.jpg" download="cote_italie.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
-		</td>
-<td width=34%><center><h3>Photo-6 </h3>
-		<p>  <a href="http://localhost/spip/IMG/ciel_rose.jpg"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/ciel_rose.jpg" alt="ciel rose" title="cliquez pour agrandir" width="250" height="160" /></a></p>
-		<p> <a href="http://localhost/spip/IMG/ciel_rose.jpg" download="ciel_rose.jpg"><p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/telecharger" alt="" width="30" height="30" /></a>&nbsp; Télécharger</p></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/partager" alt="" width="30" height="30" />&nbsp; Partager</p>
-		</td>
-<tr><td width=33%><center><h3>Rajouter </h3>
-		<p>  <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/ajouter" alt="" width="160" height="160" /></p>
-		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/rajouter" alt="" width="30" height="30" />&nbsp; Rajouter</p>
-		</td>		
-</table></center>
 	   
 	   </div>
         </div>
