--- a/squelettes/page_accueil.html
+++ b/squelettes/page_accueil.html
@@ -102,8 +102,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>A PROPOS DE NOUS</h1>
-		<p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/proverb.jpg" alt="" width="160" height="160" />&nbsp; <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/paris_8.jpg" alt="" width="250" height="160" /></p>
-		 <p><iframe width="560" height="315" src="http://localhost/spip/IMG/proverb_2017.mp4" frameborder="0" allowfullscreen></iframe></p>
+		<p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/logo_proverb" alt="" width="160" height="160" />&nbsp;&nbsp;&nbsp;&nbsp; <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/logop8_blanc" alt="" width="250" height="160" /></p>
+		<p><iframe  width="780" height="535" src="https://www.youtube.com/embed/YKwArdXRMBg" frameborder="0" allowfullscreen></iframe></p>
 		<p>Un peu d'histoire, les proverbes sont des paroles qui manifestent, réfleter et exprime un conseil ou une experience vécue et confirmer. Par les précédentes générations, les proverbes ont traversés des époques jusqu'à aujourd'hui avec leur vérité.</p>
                 <h3>Qui sommes-nous?</h3>
 		<p> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/carte_du_monde_2.jpg" alt="" width="250" height="160" />
@@ -141,34 +141,40 @@
 <p> Les proverbes sont répertoriés selon leur catégorie de thèmes et leur couleur:</p>
 <br>
 <center><table width=100% border=1>
-      <tr><td width=33%><center><h3>Drôle</h3>
+      <tr><td width=33%><center>
       <figure class="post-featured-image">
+	  <a href="http://localhost/spip/squelettes/categorie_drole.html"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/menu_drole" alt="" width="250" height="60" title="Drôle" /> </a>
 <a href="http://localhost/spip/squelettes/categorie_drole.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_bleu.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Drôle"  srcset="http://localhost/spip/IMG/abstraite_bleu.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
 </a>
       </figure> </li></td>
-<td width=33%><center><h3>Philosophique</h3>
+<td width=33%><center>
 <figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_philosophique.html"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/menu_philosophique" alt="" width="250" height="60" title="Philosophique" /> </a>
 <a href="http://localhost/spip/squelettes/categorie_philosophique.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_rouge.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Philosophique"  srcset="http://localhost/spip/IMG/abstraite_rouge.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
 </a>
       </figure> </li></td>
-<td width=34%><center><h3>Amour</h3>
+<td width=34%><center>
 <figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_amour.html"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/menu_amour" alt="" width="250" height="60" title="Amour"/></a>
 <a href="http://localhost/spip/squelettes/categorie_amour.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_rose_1.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Amour"  srcset="http://localhost/spip/IMG/abstraite_rose_1.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
 </a>
       </figure> </li></td>
-<tr><td width=33%><center><h3>Connu</h3>
+<tr><td width=33%><center>
 <figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_connu.html"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/menu_connu" alt="" width="250" height="60" title="Connu"/></a>
 <a href="http://localhost/spip/squelettes/categorie_connu.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_violet.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Connu"  srcset="http://localhost/spip/IMG/abstraite_violet.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
 </a>
       </figure> </li></td>
-<td width=33%><center><h3>Fun</h3>
+<td width=33%><center>
 <figure class="post-featured-image">
+<a href="http://localhost/spip/squelettes/categorie_fun.html"><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/menu_fun" alt="" width="250" height="60" title="Fun"/></a>
 <a href="http://localhost/spip/squelettes/categorie_fun.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_jaune.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Fun"  srcset="http://localhost/spip/IMG/abstraite_jaune.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
 </a>
       </figure> </li></td>
-<td width=34%><center><h3>Amitié</h3>
+<td width=34%><center>
 <figure class="post-featured-image">
-<a href="http://localhost/spip/squelettes/categorie_amitie.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_vert_3.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Fun"  srcset="http://localhost/spip/IMG/abstraite_vert_3.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
+<a href="http://localhost/spip/squelettes/categorie_amitie.html"> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/menu_amitié" alt="" width="250" height="60" title="Amitié"/></a>
+<a href="http://localhost/spip/squelettes/categorie_amitie.html">   <img width="250" height="160"  src="http://localhost/spip/IMG/abstraite_vert_3.jpg"  class="size-full wp-image-1201 alignnone" alt="" title="Amitié"  srcset="http://localhost/spip/IMG/abstraite_vert_3.jpg"  300w  sizes="(max-width: 376px) 100vw, 376px">
 </a>
       </figure> </li></td>
 </table></center>
@@ -182,7 +188,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/proverb.jpg" alt="" width="40" height="40" /> Application mobile:</h1>
-		      <p>Proverb propose aussi une application mobile. L'application mobile de Proverb vous permet d'envoyer des images avec des proverbes à vos contacts via téléphone mobile.</p>
+		      <p> L'application mobile de Proverb vous permet d'envoyer des images avec des proverbes qui seront <strong>géolocalisés</strong>&nbsp;<img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/marker" alt="" width="30" height="30" />, à vos contacts via téléphone mobile.</p>
                     	      <p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/reseau_sociaux" alt="" width="" height="" /></p>
 		    <a href="http://localhost/spip/squelettes/page_application_mobile.html" class="btn btn-default btn-lg">Télécharger Proverb</a>
                 </div>
@@ -195,7 +201,7 @@
     <section id="notre équipe" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/proverb.jpg" alt="" width="40" height="40" />&nbsp;Notre équipe</h1>
+                <h1> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/logo_proverb" alt="" width="50" height="50" />&nbsp;Notre équipe</h1>
 		<p>Nos développeurs développent ce site et l'application mobile pour notre public.</p>
 <center><table width=95% border=1>
 <tr><td width=33%><center><h3>L.Presley </h3>
@@ -248,8 +254,9 @@
 
 		
 		
+		
 		<br>
-		<p><a href="mailto:feedback@startbootstrap.com">proverb@gmail.com</a>
+		<p><a href="mailto:proverb.paris8@gmail.com">proverb.paris8@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
