--- a/squelettes/page_application_mobile.html
+++ b/squelettes/page_application_mobile.html
@@ -83,16 +83,26 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1> <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/mobile" alt="" width="60" height="80" /> Application mobile</h1>
-		<p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/proverb.jpg" alt="" width="100" height="100" /></p> 
+		<p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/logo_proverb" alt="" width="110" height="110" /></p> 
 		<p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Capture_tel_1.jpg" alt="" width="225" height="400" />
-	        <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Capture_tel_2.jpg" alt="" width="225" height="400" />
-		      <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Capture_tel_3.jpg" alt="" width="225" height="400" /></p>
+	       <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Capture_tel_2.jpg" alt="" width="225" height="400" />
+		   <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Capture_tel_3.jpg" alt="" width="225" height="400" /></p>
+		<p><img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/Maps" alt="" width="225" height="400" />
+		   <img class="size-full wp-image-1201 alignnone" src="http://localhost/spip/IMG/tel" alt="" width="225" height="400" /></p>
+		   
 		<p>•Publiez des photos avec votre localisation géographique enplus du proverbe 
-		<p>•Recevez une notification lorsque un proverbe est publiez près du lieu où vous vous trouvez grâce au système de géocalisation de proverbe
+		<br>
+		<font style="color:#9A9292"; size=3>texte</font> 
+		<p>•Ajouter des photos géolocalisé à vos proverbes
+		<br>
+		<font style="color:#9A9292"; size=3>texte</font> 
+		<p>•Recevez une notification géolocalisé
+		<br>
+		<font style="color:#9A9292"; size=3>texte</font> 
 		<p>•Proposez des proverbes
-		      <p>Pour savoir comment s'inscrire à Proverb, rendez-vous sur notre page <a href="http://localhost/spip/squelettes/page_connexion.html"> http://localhost/spip/squelettes/page_connexion.html</a> </p>
+		<p>Pour savoir comment s'inscrire à Proverb, rendez-vous sur notre page <a href="http://localhost/spip/squelettes/page_connexion.html"> http://localhost/spip/squelettes/page_connexion.html</a> </p>
 		<p>Proverb est disponible pour tous les utilisateurs de tous âges.</p>
-		<p>Télécharger Proverb Gratuit</p>
+		<p>Télécharger Proverb Gratuitement</p>
 		<a href="http://localhost/spip/squelettes/page_application_mobile.html" class="btn btn-default btn-lg">installer</a>
 	    </div>
         </div>
